// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match custom icon 1`] = `
<DocumentFragment>
  <div
    class="nut-badge"
  >
    <div
      class="nut-badge-content nut-badge-icon"
      style="top: 0px; right: 0px;"
    >
      <svg
        aria-labelledby="Check"
        class="nut-icon nut-icon-Check "
        role="presentation"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m942.94 336.9 44.34-44.33-88.67-88.67-44.32 44.35-457.23 457.2-248.25-248.2-44.32-44.37-88.67 88.67 44.35 44.33 248.22 248.24 44.35 44.33 44.32 44.34 44.33-44.34 44.34-44.33L942.92 336.9z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="nut-badge"
  >
    <div
      class="nut-badge-sup nut-badge-number nut-badge-one"
      style="top: 0px; right: 0px;"
    >
      8
    </div>
  </div>
</DocumentFragment>
`;
